# embedkit

./: .env.example  .gitignore  README.md  conftest.py  example.py  pyproject.toml
scripts/: compare_chunks.py  diff_chunks.py  extract_page6_openai.py  extract_pymupdf.py  find_table_pages.py  raw_json_to_md.py  rechunk_openai.py  run_hybrid_extractor.py  test_table_extraction_prompt.py
src/docvec/: __init__.py  chunker.py  embedder.py  extractor.py
src/docvec/extractors/: __init__.py  base.py  converters.py  hybrid_extractor.py  models.py  openai_extractor.py  pymupdf_extractor.py  table_extractor.py  utils.py
src/embedkit/: chunker.py  logging_config.py
tests/: test_chunker.py  test_embedder.py  test_extractor.py  test_extractors_converters.py  test_extractors_openai_extractor.py  test_extractors_openai_live.py  test_extractors_pymupdf_extractor.py  test_extractors_utils.py  test_hybrid_extractor.py
